calico/busy-box.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: dev
  labels:
    role: test
spec:
  containers:
  - name: frontend
    image: busybox
    ports: 
      - containerPort: 80
