calico/pod2-sit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: site-back
  namespace: sit
  labels:
    role: backend
spec:
  containers:
  - name: backend
    image: nginx
    ports: 
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-back
  namespace: sit
  labels:
    role: backend-service
spec:
  selector:
    role: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
