calico/default-deny.yml
###
# This policy will stop all traffic IN, OUT and within namespace. 
# Be careful if you are using this policy on live cluster
#

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: dev
spec:
  podSelector:
    matchLabels: {}

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: sit
spec:
  podSelector:
    matchLabels: {}
