calico/exception-allow-infra-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: intra-namespace
  namespace: dev
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
      - namespaceSelector:
         matchLabels:
          app: secure
