calico/exception-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: intra-namespace
  namespace: dev
spec:
  podSelector:
    matchLabels:
      role: frontend
  ingress:
    - from:
      - namespaceSelector:
         matchLabels:
          app: gama
