calico/pod-to-pod-within-namespace.yaml
# Policy to acces pod to pod communication within namespace only

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx-in-dev
  namespace: dev
spec:
  podSelector:
    matchLabels: {}      
  ingress:
    - from:
      - podSelector:
          matchLabels: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx-in-sit
  namespace: sit
spec:
  podSelector:
    matchLabels: {}      
  ingress:
    - from:
      - podSelector:
          matchLabels: {}
